# ncs-visualizer

./: .gitignore  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: ci.yml
app/: main.py
app/core/: analysis.py  mapping.py  media_probe.py  preset_manager.py
app/core/render/: preview.py
app/core/visual_engine/: background.py  bars.py  center_image.py  ring.py
app/ffmpeg/: README.txt
app/tests/: test_analysis.py  test_dsp.py  test_preset_manager.py
app/ui/: main_window.py
app/ui/panels/: audio_panel.py  background_panel.py  center_image_panel.py  output_panel.py  visual_panel.py
scripts/: build.ps1  run.ps1  setup.ps1
