[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ncs-visualizer"
version = "0.1.0"
description = "Generador de videos estilo visualizer NCS (Python + GUI)"
readme = "README.md"
requires-python = ">=3.11,<3.12"
authors = [{ name = "Tu Nombre", email = "you@example.com" }]
dependencies = []

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E","F","I","UP","B","W"]
exclude = ["dist","build",".venv","venv"]
